# taller-rust

./: .gitignore  Cargo.toml  README.md
flipper/: Cargo.toml  Makefile
flipper/src/: main.rs
js/: Cargo.toml  Makefile  index.html
js/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
slides/: Makefile  index.html
